--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  sqflite: ^1.3.0
+  path_provider: ^1.6.5
+  flutter_secure_storage: ^3.3.1+1
+  http: ^0.12.0+4
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +48,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/
-     - data/menu_opts.json
+     - data/drawer_menu_opts.json
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
