--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   path_provider: ^1.6.5
   flutter_secure_storage: ^3.3.1+1
   http: ^0.12.0+4
+  pie_chart: ^3.1.1
 
 dev_dependencies:
   flutter_test:
