--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_secure_storage: ^3.3.1+1
   http: ^0.12.0+4
   pie_chart: ^3.1.1
+  flutter_speed_dial: ^1.2.5
 
 dev_dependencies:
   flutter_test:
