--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  scoped_model: ^1.0.1
   sqflite: ^1.3.0
   path_provider: ^1.6.5
   flutter_secure_storage: ^3.3.1+1
   http: ^0.12.0+4
   pie_chart: ^3.1.1
   flutter_speed_dial: ^1.2.5
+  flutter_swiper: ^1.1.6
 
 dev_dependencies:
   flutter_test:
