--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   flutter_secure_storage: ^3.3.1+1
   http: ^0.12.0+4
   pie_chart: ^3.1.1
-  flutter_speed_dial: ^1.2.5
+  shared_preferences: ^0.5.7
   flutter_swiper: ^1.1.6
   provider: ^4.0.5+1
 
