--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter_swiper: ^1.1.6
   provider: ^4.0.5+1
   flutter_spinkit: ^4.1.2+1
+  image_picker: ^0.6.5+1
+  image_cropper: ^1.2.1
 
 dev_dependencies:
   flutter_test:
