--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   image_picker: ^0.6.5+1
   image_cropper: ^1.2.1
   flutter_launcher_icons: ^0.7.4
+  audioplayers: ^0.15.1
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +57,7 @@ flutter:
   assets:
      - assets/
      - data/drawer_menu_opts.json
+     - assets/MayorGAnimaciones/
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
@@ -70,6 +72,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+      - family: Special Elite
+        fonts:
+          - asset: fonts/SpecialElite-Regular.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
