--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   image_picker: ^0.6.5+1
   image_cropper: ^1.2.1
   flutter_launcher_icons: ^0.7.4
-  audioplayers: ^0.15.1
+  auto_size_text: ^2.1.0
 
 dev_dependencies:
   flutter_test:
