--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   shared_preferences: ^0.5.7
   flutter_swiper: ^1.1.6
   provider: ^4.0.5+1
+  device_info: ^0.4.0+4
   flutter_spinkit: ^4.1.2+1
   image_picker: ^0.6.5+1
   image_cropper: ^1.2.1
