--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   image_cropper: ^1.2.1
   flutter_launcher_icons: ^0.7.4
   auto_size_text: ^2.1.0
+  flutter_svg: ^0.19.1
 
 dev_dependencies:
   flutter_test:
