--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_launcher_icons: ^0.7.4
   auto_size_text: ^2.1.0
   flutter_svg: ^0.19.1
+  audioplayers: ^0.16.2
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +60,7 @@ flutter:
      - assets/
      - data/drawer_menu_opts.json
      - assets/MayorGAnimaciones/
+     - assets/audios/
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
