--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,9 +44,9 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.mayor_g"
-        minSdkVersion 18
-        targetSdkVersion 28
+        applicationId "ar.mil.mayor_g"
+        minSdkVersion 21
+        targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
