--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,7 @@ dependencies:
   image_cropper: ^1.2.1
   flutter_launcher_icons: ^0.7.4
   auto_size_text: ^2.1.0
-  flutter_svg: ^0.19.1
-  audioplayers: ^0.16.2
+  just_audio: ^0.5.6
 
 dev_dependencies:
   flutter_test:
