--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   image_cropper: ^1.2.1
   flutter_launcher_icons: ^0.7.4
   auto_size_text: ^2.1.0
-  just_audio: ^0.5.6
+  assets_audio_player: ^2.0.14
 
 dev_dependencies:
   flutter_test:
