--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   flutter_secure_storage: ^3.3.1+1
   http: ^0.12.0+4
   pie_chart: ^3.1.1
-  shared_preferences: ^0.5.7
+  shared_preferences:
   provider: ^4.0.5+1
   device_info: ^0.4.0+4
   flutter_spinkit: ^4.1.2+1
