--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "name": "mayor_g",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
         }
     ]
 }
