--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,20 +23,20 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  path_provider: ^1.6.5
-  flutter_secure_storage: ^3.3.1+1
-  http: ^0.12.0+4
-  pie_chart: ^3.1.1
+  cupertino_icons: ^1.0.2
+  path_provider: ^2.0.1
+  flutter_secure_storage: ^4.1.0
+  http: ^0.13.0
+  pie_chart: ^5.0.0
   shared_preferences:
-  provider: ^4.0.5+1
-  device_info: ^0.4.0+4
-  flutter_spinkit: ^4.1.2+1
-  image_picker: ^0.6.5+1
-  image_cropper: ^1.2.1
-  flutter_launcher_icons: ^0.7.4
-  auto_size_text: ^2.1.0
-  assets_audio_player: ^2.0.14
+  provider: ^5.0.0
+  device_info: ^2.0.0
+  flutter_spinkit: ^5.0.0
+  image_picker: ^0.7.2+1
+  image_cropper: ^1.4.0
+  flutter_launcher_icons: ^0.9.0
+  auto_size_text: 
+  assets_audio_player: 
 
 dev_dependencies:
   flutter_test:
